Lesson 1 Part 1 Done

--- a/app/src/main/res/layout/fragment_lession_one.xml
+++ b/app/src/main/res/layout/fragment_lession_one.xml
@@ -28,7 +28,7 @@
         android:id="@+id/parameters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:text="Data Types: We use different types of data types"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
@@ -41,11 +41,10 @@
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:text="• Whole numbers: 7, 0, 321, 2341"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/parameters"
         app:layout_constraintTop_toBottomOf="@+id/parameters" />
 
@@ -53,11 +52,10 @@
         android:id="@+id/textView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:text="• Floating point numbers: 0.32 -0.623, 345.6"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView21"
         app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
@@ -65,11 +63,10 @@
         android:id="@+id/textView23"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:text="• Characters: a, b, c, d, #, $, !, %, +, @, 1"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView22"
         app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
@@ -77,32 +74,31 @@
         android:id="@+id/imageView4"
         android:layout_width="280dp"
         android:layout_height="120dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         android:scaleType="fitXY"
         android:src="@drawable/datatypetable"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView23"
         app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
     <TextView
         android:id="@+id/textView190"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:background="#575757"
         android:text="int - Counting Whole Items:"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
         android:id="@+id/textView191"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:text="Imagine you’re counting whole apples. Apples are whole items that you don't need to split into parts for counting. In this case, we use int because it’s suitable for counting whole items like apples, pencils, books, or anything else that can be counted as a single whole unit."
         android:textColor="#FFFFFF"
         android:textSize="14sp"
@@ -114,7 +110,7 @@
         android:id="@+id/textView192"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:background="#575757"
         android:text="double - Measuring Precise Quantities:"
         android:textColor="#FFFFFF"
@@ -127,7 +123,7 @@
         android:id="@+id/textView193"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:text="Now think about measuring the amount of juice in a glass. Here, you're not counting the juice as whole units but rather measuring a quantity that can include fractions, like 1.5 liters. In this case, we use double because it allows us to measure precise quantities that include fractions, like liters of liquid, weight in kilograms, or money in a bank account."
         android:textColor="#FFFFFF"
         android:textSize="14sp"
@@ -139,7 +135,7 @@
         android:id="@+id/textView194"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="10dp"
         android:background="#575757"
         android:text="char - Storing Individual Characters:"
         android:textColor="#FFFFFF"
@@ -152,12 +148,10 @@
         android:id="@+id/textView195"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="10dp"
         android:text="Finally, imagine you want to store the first letter of your name. A letter is a single character, not a number. In this case, we use char because it’s suitable for storing individual characters like letters, special symbols, or single digits."
         android:textColor="#FFFFFF"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/next_page_l1_p1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView194" />
