--- a/app/src/main/res/layout/fragment_lesson_one_p4.xml
+++ b/app/src/main/res/layout/fragment_lesson_one_p4.xml
@@ -45,7 +45,7 @@
         android:id="@+id/done_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/rounded_bg_scoreboardrow"
         android:text="Done"
         app:layout_constraintBottom_toTopOf="@+id/textView46"
@@ -53,14 +53,14 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
-        android:id="@+id/lesson1_progressBar"
+        android:id="@+id/lesson1_progressBar_p4"
         style="?android:attr/progressBarStyle"
         android:layout_width="100dp"
         android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView70" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView70"
