Small design changes.

--- a/app/src/main/res/layout/fragment_lession_one.xml
+++ b/app/src/main/res/layout/fragment_lession_one.xml
@@ -98,6 +98,7 @@
         android:id="@+id/textView191"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="Imagine you’re counting whole apples. Apples are whole items that you don't need to split into parts for counting. In this case, we use int because it’s suitable for counting whole items like apples, pencils, books, or anything else that can be counted as a single whole unit."
         android:textColor="#FFFFFF"
@@ -123,8 +124,9 @@
         android:id="@+id/textView193"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="Now think about measuring the amount of juice in a glass. Here, you're not counting the juice as whole units but rather measuring a quantity that can include fractions, like 1.5 liters. In this case, we use double because it allows us to measure precise quantities that include fractions, like liters of liquid, weight in kilograms, or money in a bank account."
+        android:text=" Imagine measuring juice in a glass, which can include fractions like 1.5 liters. We use double for this, as it measures precise amounts, such as liquid, weight, or money."
         android:textColor="#FFFFFF"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,6 +150,7 @@
         android:id="@+id/textView195"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:text="Finally, imagine you want to store the first letter of your name. A letter is a single character, not a number. In this case, we use char because it’s suitable for storing individual characters like letters, special symbols, or single digits."
         android:textColor="#FFFFFF"
