--- a/app/src/main/res/layout/fragment_lesson_two.xml
+++ b/app/src/main/res/layout/fragment_lesson_two.xml
@@ -31,14 +31,13 @@
             android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="297dp"
             android:text="Introduction"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold|italic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/lesson2_title"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lesson2_title" />
 
         <TextView
