--- a/app/src/main/res/layout/fragment_lesson_two_p3.xml
+++ b/app/src/main/res/layout/fragment_lesson_two_p3.xml
@@ -147,7 +147,7 @@
         android:text="Click here and try running those questions alone to see how it works!"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -157,12 +157,11 @@
         android:id="@+id/next_page_l2_p3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
         android:backgroundTint="#00FFFFFF"
         android:src="@drawable/next_page"
         app:layout_constraintBottom_toTopOf="@+id/link_click_msg_l2_p3"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView79" />
 
     <ProgressBar
         android:id="@+id/lesson2_progressBar_p3"
