--- a/app/src/main/res/layout/fragment_lessons.xml
+++ b/app/src/main/res/layout/fragment_lessons.xml
@@ -11,19 +11,19 @@
         android:id="@+id/lesson1_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="210dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginTop="45dp"
         android:background="#00FFFFFF"
         android:src="@drawable/lesson1_icon"
         app:layout_constraintBottom_toTopOf="@+id/lesson2_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
     <ImageButton
         android:id="@+id/lesson2_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
         android:background="#00FFFFFF"
         android:src="@drawable/lesson2_icon"
         app:layout_constraintBottom_toTopOf="@+id/lesson3_btn"
@@ -49,10 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
-        android:layout_marginBottom="178dp"
         android:background="#00FFFFFF"
         android:src="@drawable/lesson4_icon"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/lesson3_btn"
         app:layout_constraintStart_toStartOf="@+id/lesson3_btn"
         app:layout_constraintTop_toBottomOf="@+id/lesson3_btn" />
@@ -61,24 +59,22 @@
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="159dp"
         android:layout_marginBottom="10dp"
         android:text='"Every small step counts. Keep going!"'
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lesson4_btn" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/imageView7"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_marginBottom="500dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:scaleType="fitXY"
         android:src="@drawable/onlylogo"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
